[gd_scene load_steps=5 format=3 uid="uid://bsk4guq6hvly8"]

[ext_resource type="Texture2D" uid="uid://d3h840yp80ky2" path="res://graphics/projectiles/blue.png" id="1_idwll"]
[ext_resource type="Script" path="res://scenes/projectiles/laser.gd" id="1_lfbcl"]
[ext_resource type="Texture2D" uid="uid://brj4jhyui1ba6" path="res://graphics/lights/textures/circle.png" id="3_hbfwe"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tlss6"]
radius = 7.0
height = 106.0

[node name="Laser" type="Area2D"]
scale = Vector2(1.25, 1.25)
collision_layer = 8
collision_mask = 15
script = ExtResource("1_lfbcl")
speed = 2000

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-28, 0)
rotation = 1.5708
texture = ExtResource("1_idwll")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_tlss6")

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(43.2, 0)
color = Color(0.376471, 0.560784, 0.619608, 1)
shadow_enabled = true
texture = ExtResource("3_hbfwe")
texture_scale = 0.5

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="LaserTimer" to="." method="_on_laser_timer_timeout"]
